# Head_First_C

./: CMakeLists.txt
Chapter_1/: CMakeLists.txt  CardsFace.c  CardsInTheShoe.c  CardsPage19.c  DoWhileCards.c  EffIfCardsPage19.c  SwitchCardsPage27.c  WhileCards.c
Chapter_10/: CMakeLists.txt
Chapter_10/Page_454/: CMakeLists.txt  Greetings.c
Chapter_10/Page_462/: CMakeLists.txt  MathMaster.c
Chapter_11/: CMakeLists.txt
Chapter_11/Page_474/: AdviseServer.c  CMakeLists.txt
Chapter_11/Page_483/: CMakeLists.txt  ikkpServer.c
Chapter_11/Page_488/: CMakeLists.txt  ikkpServer.c
Chapter_11/Page_497/: CMakeLists.txt  WikiClient.c
Chapter_12/: CMakeLists.txt
Chapter_12/Page_507/: Argument.c  CMakeLists.txt
Chapter_12/Page_510/: Beer.c  CMakeLists.txt
Chapter_12/Page_515/: CMakeLists.txt  ParamTest.c
Chapter_12/Page_519/: BeerVersionA.c  BeerVersionB.c  CMakeLists.txt
Chapter_2/: ArrayAddress.c  CMakeLists.txt  CodeForTestDrivePage13.c  Comma.c  Food.c  Fred.C  test.c
Chapter_2.5/: CMakeLists.txt
Chapter_2.5/Page_94/: CMakeLists.txt  FindTrack.c
Chapter_2.5/Page_98/: CMakeLists.txt  ReverseString.c
Chapter_2/Page_45/: CMakeLists.txt  PirateGameBroken.c
Chapter_2/Page_50/: CMakeLists.txt  PirateGameFixed.c
Chapter_2/Page_53/: CMakeLists.txt  FortuneCookie.c
Chapter_2/Page_54/: CMakeLists.txt  FortuneCookie2.c
Chapter_2/Page_57/: CMakeLists.txt  mating.c
Chapter_2/Page_62/: CMakeLists.txt  Sharpen.c
Chapter_2/Page_66/: CMakeLists.txt  Food.c
Chapter_2/Page_67/: CMakeLists.txt  Food.c
Chapter_2/Page_69/: CMakeLists.txt  Monte.c
Chapter_2/Page_72/: CMakeLists.txt  Monte.c
Chapter_3/: CMakeLists.txt
Chapter_3/Page_106/: CMakeLists.txt  Geo2Json.c
Chapter_3/Page_116/: CMakeLists.txt  Geo2Json.c
Chapter_3/Page_123/: CMakeLists.txt  Geo2Json.c  gpsdata.csv
Chapter_3/Page_126/: CMakeLists.txt  TopSecret.c
Chapter_3/Page_134/: Bermuda.c  CMakeLists.txt
Chapter_3/Page_140/: CMakeLists.txt  Categorize.c
Chapter_3/Page_144/: CMakeLists.txt  Categorize.c  gpsdata.csv
Chapter_3/Page_152/: CMakeLists.txt  OrderPizza.c
Chapter_4/: CMakeLists.txt
Chapter_4/Page_166/: BusTables.c  CMakeLists.txt
Chapter_4/Page_174/: CMakeLists.txt  Totaller.c
Chapter_4/Page_186/: CMakeLists.txt  Encrypt.c  MessageHider.c
Chapter_5/: CMakeLists.txt
Chapter_5/Page_221/: CMakeLists.txt  Fish.c
Chapter_5/Page_224/: CMakeLists.txt  PoolPuzzle.c
Chapter_5/Page_230/: CMakeLists.txt  NestingStruct.c
Chapter_5/Page_234/: CMakeLists.txt  Scuba.c
Chapter_5/Page_240/: CMakeLists.txt  Turtle.c
Chapter_5/Page_245/: CMakeLists.txt  SafeCracker.c
Chapter_5/Page_254/: BadUnion.c  CMakeLists.txt
Chapter_5/Page_259/: CMakeLists.txt  EnumTest.c
Chapter_5/Page_264/: Aquarium.c  CMakeLists.txt
Chapter_6/: CMakeLists.txt
Chapter_6/Page_274/: CMakeLists.txt  Island.c
Chapter_6/Page_288/: CMakeLists.txt  Island.c
Chapter_6/Page_299/: CMakeLists.txt  Spies.c
Chapter_6/Page_306/: CMakeLists.txt  Spies.c
Chapter_7/: CMakeLists.txt
Chapter_7/Page_323/: CMakeLists.txt  Find.c
Chapter_7/Page_332/: CMakeLists.txt  LibSort.c
Chapter_7/Page_336/: CMakeLists.txt  SendDearJohn.c
Chapter_7/Page_340/: CMakeLists.txt  DearJohn.c
Chapter_7/Page_344/: CMakeLists.txt  VariadicFunc.c
Chapter_7/Page_348/: CMakeLists.txt
Chapter_8/: CMakeLists.txt
Chapter_8/Page_352/: CMakeLists.txt  Checksum.c  Encrypt.c  PriceDrinks.c  TestCode.c
Chapter_8/Page_368/Elliptical/: CMakeLists.txt  Elliptical.c
Chapter_8/Page_368/HFCalLib/: CMakeLists.txt
Chapter_8/Page_376/: CMakeLists.txt
Chapter_8/Page_376/Elliptical/: CMakeLists.txt  Elliptical.c
Chapter_8/Page_376/HFCalLib/: CMakeLists.txt  HFCal.c
Chapter_9/: CMakeLists.txt
Chapter_9/Page_400/: CMakeLists.txt  GuardLog.c
Chapter_9/Page_407/: CMakeLists.txt  MyExecProgram.c
Chapter_9/Page_410/: CMakeLists.txt  IPConfig.c
Chapter_9/Page_418/: CMakeLists.txt  NewsHound.c
